made card left aligned and fixed buttons

--- a/src/components/UI/BarChart/BarChart.module.scss
+++ b/src/components/UI/BarChart/BarChart.module.scss
@@ -1,5 +1,5 @@
 .BarChart {
-    width: 85%;
+    width: 100%;
     height: 7px;
     color: #393838;
     margin-left: auto;
