--- a/src/routes/mentor/YourMentees/MenteeCard/MenteeCard.module.scss
+++ b/src/routes/mentor/YourMentees/MenteeCard/MenteeCard.module.scss
@@ -13,10 +13,11 @@
     border: 1px solid #D3D3D3;
     width: 360px;
     height: 180px;
-    padding-top: 20px;
+    padding-top: 21px;
     margin-bottom: 30px;
     margin-right: 30px;
-    text-align: center;
+    padding-left: 27px;
+    padding-right: 27px;
 
     &:hover,
     &:focus-visible {
